--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -72,6 +72,222 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "649394e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Define the function for initializing the inventory\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity >= 0:\n",
+    "                    inventory[product] = quantity\n",
+    "                    valid_input = True\n",
+    "                else:\n",
+    "                    print(\"Quantity cannot be negative. Please enter a valid quantity.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input. Please enter a valid quantity.\")\n",
+    "    return inventory\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "439abc1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Step 2: Define the function for getting customer orders\n",
+    "\"\"\"3. Modify the `get_customer_orders` function to include error handling.\n",
+    "   - If the user enters an invalid number of orders (e.g., a negative value or a non-numeric value), display an error message and ask them to re-enter the number of orders.\n",
+    "   - If the user enters an invalid product name (e.g., a product name that is not in the inventory), or that doesn't have stock available, display an error message and ask them to re-enter the product name. *Hint: you will need to pass inventory as a parameter*\n",
+    "   - Use a try-except block to handle the error and continue prompting the user until a valid product name is entered.\"\"\"\n",
+    "\n",
+    "def get_customer_orders(inventory):\n",
+    "    valid_input = False\n",
+    "    while not valid_input:\n",
+    "        try: \n",
+    "            num_orders = int(input(\"Enter the number of customer orders: \"))\n",
+    "            if num_orders > 0 :\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Quantity cannot be negative. Please enter a valid quantity.\")\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input. Please enter a valid number of orders\")\n",
+    "            \n",
+    "    customer_orders = set()\n",
+    "\n",
+    "    for _ in range(num_orders):\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                product_name = input(\"Enter the name of a product that a customer wants to order: \")\n",
+    "                if product_name in inventory and inventory[product_name] > 0:\n",
+    "                    customer_orders.add(product_name)\n",
+    "                    valid_input = True\n",
+    "                else:\n",
+    "                    print(\"ERROR TEST\")\n",
+    "            except KeyError:\n",
+    "                print(\"ERROR TEST 2\")\n",
+    "    return customer_orders\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5b9dff06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Define the function for updating the inventory\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    inventory = {product: inventory[product] - 1 if product in customer_orders else inventory[product] for product in inventory}\n",
+    "    inventory = {product: quantity for product, quantity in inventory.items() if quantity > 0}\n",
+    "    return inventory\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a121100a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 4: Define the function for calculating order statistics\n",
+    "def calculate_order_statistics(customer_orders, products):\n",
+    "    total_products_ordered = len(customer_orders)\n",
+    "    percentage_ordered = (total_products_ordered / len(products)) * 100\n",
+    "    return total_products_ordered, percentage_ordered\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0a8831bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 5: Define the function for printing order statistics\n",
+    "def print_order_statistics(order_statistics):\n",
+    "    print(\"\\nOrder Statistics:\")\n",
+    "    print(\"Total Products Ordered:\", order_statistics[0])\n",
+    "    print(\"Percentage of Unique Products Ordered:\", order_statistics[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "073b9abb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 6: Define the function for printing the updated inventory\n",
+    "def print_updated_inventory(inventory):\n",
+    "    print(\"\\nInventory:\")\n",
+    "    [print(f\"{product}: {quantity}\") for product, quantity in inventory.items()]\n",
+    "    print(\"----------------\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "56ab53a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 7: Define the function for calculating the total price of the customer order\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    total_price = 0.0\n",
+    "    for product in customer_orders:\n",
+    "        valid_price_input = False \n",
+    "        while not valid_price_input:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price of {product}: \"))\n",
+    "                if price > 0:\n",
+    "                    total_price += price\n",
+    "                    valid_price_input = True\n",
+    "                else:\n",
+    "                    print(\"Price cannot be negative. Please enter a valid price.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input. Please enter a valid price.\")\n",
+    "    return total_price\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "36e42f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input. Please enter a valid quantity.\n",
+      "Quantity cannot be negative. Please enter a valid quantity.\n",
+      "\n",
+      "Inventory:\n",
+      "t-shirt: 5\n",
+      "mug: 5\n",
+      "hat: 5\n",
+      "book: 5\n",
+      "keychain: 5\n",
+      "----------------\n",
+      "\n",
+      "Invalid input. Please enter a valid number of orders\n",
+      "Customer order: {'hat', 'mug', 'book'}\n",
+      "\n",
+      "\n",
+      "Order Statistics:\n",
+      "Total Products Ordered: 3\n",
+      "Percentage of Unique Products Ordered: 60.0\n",
+      "\n",
+      "\n",
+      "Inventory:\n",
+      "t-shirt: 5\n",
+      "mug: 4\n",
+      "hat: 4\n",
+      "book: 4\n",
+      "keychain: 5\n",
+      "----------------\n",
+      "\n",
+      "Total Order Price : 80.0$\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 8: Call the functions in the appropriate sequence to manage customer orders\n",
+    "products = [\"t-shirt\",\"mug\",\"hat\",\"book\",\"keychain\"]\n",
+    "\n",
+    "initial_inventory = initialize_inventory(products)\n",
+    "print_updated_inventory(initial_inventory)\n",
+    "print()\n",
+    "\n",
+    "orders = get_customer_orders(initial_inventory)\n",
+    "print(f\"Customer order:\", orders)\n",
+    "print()\n",
+    "\n",
+    "order_stats = calculate_order_statistics(orders, products) \n",
+    "print_order_statistics(order_stats)\n",
+    "print()\n",
+    "\n",
+    "inventory = update_inventory(orders, initial_inventory)\n",
+    "print_updated_inventory(inventory)\n",
+    "print()\n",
+    "\n",
+    "total_price = calculate_total_price(orders)\n",
+    "print(f\"Total Order Price : {total_price}$\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -90,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
